BillingHub/force-app/main/default/objects/Payment_Event_Log__c/Payment_Event_Log__c.object-meta.xml
<CustomObject>
    <label>Payment Event Log</label>
    <pluralLabel>Payment Event Logs</pluralLabel>
    <nameField>
        <label>Log Number</label>
        <type>AutoNumber</type>
        <displayFormat>PEL-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>