BillingHub/force-app/main/default/objects/Payment_Event_Log__c/fields/External_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Payment_Id__c</fullName>
    <label>External Payment Id</label>
    <type>Text</type>
    <length>60</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Idempotency key from the payment processor — detects and safely ignores duplicate webhook deliveries.</description>
</CustomField>