BillingHub/force-app/main/default/objects/Payment_Event_Log__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice</label>
    <type>Lookup</type>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Payment Event Logs</relationshipLabel>
    <relationshipName>Payment_Event_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>